; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/sntp/extr_log.c_cleanup_log.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/sntp/extr_log.c_cleanup_log.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@counter = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@syslogit = common dso_local global i32 0, align 4
@syslog_file = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @cleanup_log to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cleanup_log() #0 {
  %1 = load i32, i32* @counter, align 4
  %2 = icmp eq i32 %1, 1
  br i1 %2, label %3, label %9

3:                                                ; preds = %0
  %4 = load i32, i32* @TRUE, align 4
  store i32 %4, i32* @syslogit, align 4
  %5 = load i32*, i32** @syslog_file, align 8
  %6 = call i32 @fflush(i32* %5)
  %7 = load i32*, i32** @syslog_file, align 8
  %8 = call i32 @fclose(i32* %7)
  store i32* null, i32** @syslog_file, align 8
  store i32 0, i32* @counter, align 4
  br label %9

9:                                                ; preds = %3, %0
  ret void
}

declare dso_local i32 @fflush(i32*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
